# rl

./: .commitlintrc.cts  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pylintrc  pyproject.toml
.github/: action.yml
.github/workflows/: checks.yml  codeql-analysis.yml
.husky/: pre-commit
requirements/: dev.txt  requirements.in  requirements.txt
rl/: __init__.py  __main__.py  fov.py  main.py  maps.py  paths.py
rl/mapfiles/: map.txt  path.txt
rl/modes/: __init__.py  inspect.py  move.py
