[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rl"
requires-python = ">=3.12"
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["rl"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements/requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev.txt" }

[tool.black]
line-length = 80

[tool.ruff]
lint.ignore = [
	# ambiguous variable name
	"E741",
]
line-length = 80
target-version = "py312"
